--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "npx nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +17,8 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "webpack": "^5.88.1"
   }
 }
